force-app/main/default/objects/Campaign/fields/Billing_plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de pago</label>
    <referenceTo>Billing_plan__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>