force-app/main/default/objects/Campaign/fields/coupon_code_prefix__c.field-meta.xml
<CustomField>
    <fullName>coupon_code_prefix__c</fullName>
    <label>Prefijo del cupón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>