force-app/main/default/objects/Campaign/fields/Coupon_code_quantity__c.field-meta.xml
<CustomField>
    <fullName>Coupon_code_quantity__c</fullName>
    <label>Cantidad de cupones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>