force-app/main/default/objects/Campaign/fields/Flat_amount_discounts__c.field-meta.xml
<CustomField>
    <fullName>Flat_amount_discounts__c</fullName>
    <description>Campos creados para completar info de campañas</description>
    <label>Cantidad fija de descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>