force-app/main/default/objects/Campaign/fields/Number_of_periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_periods__c</fullName>
    <description>Campo creado para competar la info de las campañas custom</description>
    <label>Número de períodos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>