force-app/main/default/objects/Campaign/fields/Percentage_discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_discount__c</fullName>
    <description>Campo creado para competar la info de las campañas custom</description>
    <label>Porcentaje de Descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>