force-app/main/default/objects/Campaign/fields/Promotion_code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_code__c</fullName>
    <description>Campo creado para competar la info de las campañas custom</description>
    <label>Código de cupón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>