force-app/main/default/objects/Campaign/fields/total_code_marked_used__c.field-meta.xml
<CustomField>
    <fullName>total_code_marked_used__c</fullName>
    <label>Total de cupones usados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>